@@ -4,6 +4,7 @@ Version 0.10.0~dev
 	* Rewrite man pages in RST (better github/gitlab support)
 	* Bootstrap a test suite
 	* Add a "--version" option to toolbox2-transcode
+	* Allow to transcode a single frame
 	* Various fixes
 
 Version 0.9.0 Released on 2014/09/17
